--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Memory Game</title>
 </head>
 <body>
+    <h1>Find the matching pics</h1>
     <div class="board-container">
 
     </div>
